syntax = "proto3";

option go_package = "example-gRPC/calculatorpb";

service Calculator {
  rpc Add (AddRequest) returns (AddResponse);
  rpc Subtract (SubtractRequest) returns (SubtractResponse);
}

message AddRequest {
  int64 a = 1;
  int64 b = 2;
}

message AddResponse {
  int64 result = 1;
}

message SubtractRequest {
  int64 a = 1;
  int64 b = 2;
}

message SubtractResponse {
  int64 result = 1;
}
